<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:src="@mipmap/img_logo" />

    <TextView
        android:id="@+id/txtVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/system_version"
        android:textColor="@color/setting_text_normal"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtUpgrade"
        style="@style/setting_content_text"
        android:layout_marginTop="10dp"
         android:background="@drawable/common_view_background_selector"
        android:drawableLeft="@mipmap/ic_update"
        android:drawablePadding="2dp"
        android:text="@string/update"
        android:textColor="@color/home_bg"
        android:textSize="20sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:contentDescription="@null"
        android:src="@mipmap/img_mark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/company_name"
        android:textColor="@color/setting_text_normal"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/copyright"
        android:textColor="@color/setting_text_normal"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtTerms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
         android:background="@drawable/common_view_background_selector"
        android:text="@string/usage_terms"
        android:textColor="@color/home_bg"
        android:textSize="14sp" />


    <TextView
        android:id="@+id/txtRestore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/common_view_background_selector"
        android:text="恢复出厂设置"
        android:textColor="@color/home_bg"
        android:textSize="14sp" />

</LinearLayout>