<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="20dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible" >

            <TextView
                android:id="@+id/tv_main_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_material"
                android:textColor="@color/setting_text_pressed"
                android:textSize="@dimen/prepare_main_title_size" />

            <TextView
                android:id="@+id/tv_main_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/prepare_main_content_margin_top"
                android:textColor="@color/setting_text_normal"
                android:textSize="@dimen/introduce_text_content_size" />

            <TextView
                android:id="@+id/tv_accessory_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/prepare_assist_title_margin_top"
                android:text="@string/accessory_material"
                android:textColor="@color/setting_text_pressed"
                android:textSize="@dimen/prepare_main_title_size" />

            <TextView
                android:id="@+id/tv_accessory_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/prepare_main_content_margin_top"
                android:textColor="@color/setting_text_normal"
                android:textSize="@dimen/introduce_text_content_size" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnCook"
        android:layout_width="match_parent"
        android:layout_height="@dimen/prepare_start_height"
        android:background="@mipmap/btn_start_bg"
        android:text="@string/start_cook"
        android:textColor="@color/White"
        android:textSize="@dimen/prepare_start_text_size" />

</LinearLayout>